사용자 탭 내가 쓴 게시글 수정

--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -91,7 +91,7 @@
         android:id="@+id/user_review"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="나의 후기 보기"
+        android:text="내가 쓴 게시글"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="5dp"
