1. 로그아웃 상태에서 어플 실행 시 로그인화면 안뜨는 현상 수정 2. 인기 게시물 업데이트 3. 코드 리팩토링

--- a/app/src/main/res/layout/fragment_cafe.xml
+++ b/app/src/main/res/layout/fragment_cafe.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:id="@+id/layout_cafe"
-    tools:context=".ui.main.Cafe">
+    tools:context=".Google_Map.MapMain">
 
     <LinearLayout
         android:layout_width="match_parent"
